--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "bookshelf": "^0.13.3",
+    "bookshelf-soft-delete": "^4.0.0",
     "compression": "^1.7.2",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "helmet": "^3.12.0",
     "knex": "^0.14.6",
     "mongoose": "^5.1.1",
-    "winston": "^2.4.2"
+    "winston": "^2.4.2",
+    "uuid-v4": "^0.1.0",
+    "pg": "^7.4.3"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
