--- a/package.json
+++ b/package.json
@@ -10,23 +10,25 @@
     "watch": "./node_modules/.bin/nodemon src/index.js --exec babel-node",
     "lint": "eslint src/**",
     "precommit": "npm run lint",
-    "build": "rimraf ./dist && babel src --ignore *.spec.js --out-dir dist --copy-files",
+    "build": "rimraf ./dist && babel src --ignore *.spec.js,src/database/migrations/*.js,src/database/seeds/**/*.js  --out-dir dist --copy-files",
     "test:watch": "jest --watchAll",
     "test": "jest --coverage"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
     "bookshelf": "^0.13.3",
+    "bookshelf-modelbase": "^2.10.4",
     "bookshelf-soft-delete": "^4.0.0",
+    "bookshelf-uuid": "^1.0.0",
     "compression": "^1.7.2",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "helmet": "^3.12.0",
     "knex": "^0.14.6",
     "mongoose": "^5.1.1",
-    "winston": "^2.4.2",
+    "pg": "^7.4.3",
     "uuid-v4": "^0.1.0",
-    "pg": "^7.4.3"
+    "winston": "^2.4.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -37,11 +39,13 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-stage-0": "^6.24.1",
+    "dotenv": "^5.0.1",
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-flowtype": "^2.46.3",
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-prettier": "^2.6.0",
+    "faker": "^4.1.0",
     "flow": "^0.2.3",
     "flow-bin": "^0.72.0",
     "jest": "^22.4.3",
