--- a/package.json
+++ b/package.json
@@ -14,6 +14,26 @@
     "test:watch": "jest --watchAll",
     "test": "jest --coverage"
   },
+  "lint-staged": {
+    "linters": {
+      "src/**/*.{js}": [
+        "prettier --write",
+        "git add"
+      ],
+      "test/**/*.{js}": [
+        "prettier --write",
+        "git add"
+      ]
+    },
+    "ignore": [
+
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "dependencies": {
     "body-parser": "^1.18.3",
     "bookshelf": "^0.13.3",
@@ -46,9 +66,9 @@
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-prettier": "^2.6.0",
     "faker": "^4.1.0",
-    "flow": "^0.2.3",
-    "flow-bin": "^0.72.0",
+    "husky": "^1.3.1",
     "jest": "^22.4.3",
+    "lint-staged": "^8.1.5",
     "nodemon": "^1.17.4",
     "prettier": "^1.12.1",
     "rimraf": "^2.6.2",
